--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "katatema serve",
+    "build": "katatema build",
+    "deploy": "npm run build && gh-pages --dist docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/miyamonz/simpletimer#readme",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "katatema": "^0.1.7"
   },
   "dependencies": {
