--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "katatema": "^0.1.7"
   },
   "dependencies": {
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "store": "^1.3.20"
   }
 }
